# DesafioEPTA

./: README.md
Apresentação/CANVAS/: Desafio.canvas
Códigos/: requirements.txt
Códigos/IMU_and_GNSS_py/: gps_test.py  quat2rotmatrix.py  rpy.py  teste_final.py  websocket_import.py  xyz_to_ned.py
Códigos/desafio_cpp/: CMakeLists.txt  listener_wbsckt.cpp
Códigos/desafio_regular/: dados telemetria foguete real.xlsx  desafio_ok.py
